--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="main-menu-items">
             <ul class="main-menu-list">
                 <li>
-                    <a href="#index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="#chapters">Chapters</a>
@@ -66,7 +66,7 @@
             <div id="mobile-menu-items" class="mobile-menu-items">
                 <ul class="mobile-menu-list">
                     <li>
-                    <a href="#index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="#chapters">Chapters</a>
